--- a/css/social.css
+++ b/css/social.css
@@ -92,3 +92,29 @@ img {
 .navbar:hover {
   color: #17a2b8;
 }
+
+.landing {
+  position: relative;
+  background: url("") no-repeat center center/cover;
+  height: 100vh;
+}
+
+.landing-inner {
+  color: #FFF;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 80%;
+  margin: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
