--- a/css/social.css
+++ b/css/social.css
@@ -1,3 +1,12 @@
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 2rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+}
+
 .x-large {
   font-size: 4rem;
   line-height: 1.2;
@@ -13,6 +22,10 @@
 .lead {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+.text-primary {
+  color: #17a2b8;
 }
 
 .bg-danger {
