--- a/css/social.css
+++ b/css/social.css
@@ -1,3 +1,83 @@
+.m-1 {
+  margin: 1rem;
+}
+
+.my-1 {
+  margin: 1rem 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.py-1 {
+  padding: 1rem 0;
+}
+
+.m-2 {
+  margin: 2rem;
+}
+
+.my-2 {
+  margin: 2rem 0;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.py-2 {
+  padding: 2rem 0;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.my-3 {
+  margin: 3rem 0;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.py-3 {
+  padding: 3rem 0;
+}
+
+.m-4 {
+  margin: 4rem;
+}
+
+.my-4 {
+  margin: 4rem 0;
+}
+
+.p-4 {
+  padding: 4rem;
+}
+
+.py-4 {
+  padding: 4rem 0;
+}
+
+.m-5 {
+  margin: 5rem;
+}
+
+.my-5 {
+  margin: 5rem 0;
+}
+
+.p-5 {
+  padding: 5rem;
+}
+
+.py-5 {
+  padding: 5rem 0;
+}
+
 .container {
   max-width: 1100px;
   margin: auto;
@@ -30,7 +110,7 @@
 
 .bg-danger {
   background-color: #dc3545;
-  color: #333;
+  color: #fff;
 }
 
 .bg-light {
@@ -51,7 +131,7 @@
 
 .bg-danger {
   background-color: #dc3545;
-  color: #333;
+  color: #fff;
 }
 
 .bg-white {
@@ -103,7 +183,7 @@
 
 .btn.btn-danger {
   background-color: #dc3545;
-  color: #333;
+  color: #fff;
 }
 
 .btn.btn-danger:hover {
@@ -115,6 +195,34 @@
   color: #fff;
 }
 
+.alert {
+  padding: 0.8rem;
+  margin: 1rem;
+  opacity: 0.9;
+  background: #f4f4f4;
+  color: #333;
+}
+
+.alert.alert-primary {
+  background-color: #17a2b8;
+  color: #fff;
+}
+
+.alert.alert-dark {
+  background-color: #343a40;
+  color: #fff;
+}
+
+.alert.alert-success {
+  background-color: #28a745;
+  color: #fff;
+}
+
+.alert.alert-danger {
+  background-color: #dc3545;
+  color: #fff;
+}
+
 .dark-overlay {
   height: 100%;
   width: 100%;
@@ -122,6 +230,30 @@
   top: 0;
   left: 0;
   background-color: rgba(43, 40, 40, 0.7);
+}
+
+.form-group {
+  margin: 1.2rem 0;
+}
+
+.form-text {
+  display: block;
+  margin-top: 0.3rem;
+  color: #888;
+}
+
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'],
+.form input[type='date'],
+.form select,
+.form textarea {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+  outline: none;
 }
 
 * {
