--- a/css/social.css
+++ b/css/social.css
@@ -108,6 +108,10 @@
   color: #17a2b8;
 }
 
+.round-img {
+  border-radius: 50%;
+}
+
 .bg-danger {
   background-color: #dc3545;
   color: #fff;
@@ -344,4 +348,18 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+}
+
+.profile {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 4fr 2fr;
+      grid-template-columns: 2fr 4fr 2fr;
+  grid-gap: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  line-height: 1.8;
+  margin-bottom: 1rem;
 }
