--- a/css/social.css
+++ b/css/social.css
@@ -271,6 +271,15 @@
   background-color: rgba(43, 40, 40, 0.7);
 }
 
+.table th, .table td {
+  padding: 1rem;
+  text-align: left;
+}
+
+.table th {
+  background: #f4f4f4;
+}
+
 .form-group {
   margin: 1.2rem 0;
 }
