--- a/css/social.css
+++ b/css/social.css
@@ -566,3 +566,26 @@ img {
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
 }
+
+.post-form-header {
+  padding: 00.5rem;
+}
+
+.post {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+      grid-template-columns: 1fr 4fr;
+  grid-gap: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.post > div:first-child {
+  text-align: center;
+}
+
+.post img {
+  width: 150px;
+}
